
2010-10-26 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iostream replaced by fprintf()

2010-09-21 Ugo Pattacini <ugo.pattacini@iit.it>
	   * added neuralNetworks module

2010-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Ported to iCub/main

2010-03-06 Ugo Pattacini <ugo.pattacini@iit.it>
	   * minJerkTrajGen changed into minJerkCtrl

2010-02-18 Ugo Pattacini <ugo.pattacini@iit.it>
	   * minJerkTrajGen: feedback formulation (Shadmehr)

2010-02-17 Francesco Nori <francesco.nori@iit.it>
	   * added functions dcm2euler and euler2dcm

2010-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
	   * CMakeLists.txt, CTRLLIBConfig.cmake: for win32 DEBUG_POSTFIX put equal to "d"

2010-01-22 Serena Ivaldi <serena.ivaldi@iit.it>
	   * optimalControl module added

2010-01-15 Ugo Pattacini <ugo.pattacini@iit.it>
	   * adaptWinPolyEstimator: reset() method added 

2009-12-22 Ugo Pattacini <ugo.pattacini@iit.it>
	   * trajectoryGenerator: new feedback sampling algorithm 

2009-11-11 Ugo Pattacini <ugo.pattacini@iit.it>
	   * ctrlMath: some functions moved to Yarp layer
       * all headers: namespace rearranged

2009-07-29 Ugo Pattacini <ugo.pattacini@iit.it>
	   * ctrlMath:
         - SE3inv() added to invert 4 by 4 rototranslational matrix
           (about 5 times faster than pinv())

2009-07-05 Ugo Pattacini <ugo.pattacini@iit.it>
	   * trajectoryGenerator:
         - removed MinJerkGenVelCtrl class
         - MinJerkGen class modified

2009-06-25 Ugo Pattacini <ugo.pattacini@iit.it>
	   * All modules: "using namespace" removed from within header files

2009-05-19 Ugo Pattacini <ugo.pattacini@iit.it>
	   * trajectoryGenerator: bug fix

2009-04-22 Ugo Pattacini <ugo.pattacini@iit.it>
	   * adaptWinPolyEstimator: bug fix

2009-04-04 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Added classes for functions encoding

2009-04-03 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Added classes for trajectory generation

2009-04-02 Ugo Pattacini <ugo.pattacini@iit.it>